# brojs-agent

./: .env.example  .gitignore  README.md  agent.py  langgraph.json  pyproject.toml  requirements.txt
src/agent/: __init__.py  agent.py  constants.py  gitea_tools.py  llm.py  mcp_client.py  prompts.py  subagents.py  tools.py
src/agent/graph/: __init__.py  pipeline.py
src/agent/middlewares/: __init__.py  sanitize_tool_calls.py  validate_journal_workflow.py
