[project]
name = "brojs-agent"
version = "0.1.0"
description = "AI-агент для автоматического выполнения заданий курса BroJS"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.3",
    "langchain>=1.3.0",
    "langchain-openai>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=1.0.8",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "markdownify>=0.13.0",
    "tavily-python>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
